Fix: Avoids v-scrollbar in FF

--- a/editor/static/css/Editor.css
+++ b/editor/static/css/Editor.css
@@ -25,7 +25,7 @@
  *****************************************************************************/
 
 #page.home {
-    padding: 10% 0;
+    padding: 7.5% 0;
 }
 
 #page.home .title {
